...
        selectionStyle = .none
        
        [cellImageView, gradientView, likeButton, dateLabel].forEach {
            $0.translatesAutoresizingMaskIntoConstraints = false
            contentView.addSubview($0)
        }
        // likeButton.accessibilityIdentifier = "Like" For some reason this is not working
    }
    
    private func setupConstraints() {
        NSLayoutConstraint.activate([
            cellImageView.topAnchor.constraint(equalTo: contentView.topAnchor, constant: 4),
            cellImageView.leadingAnchor.constraint(equalTo: contentView.leadingAnchor, constant: 16),
...
            dateLabel.trailingAnchor.constraint(lessThanOrEqualTo: cellImageView.trailingAnchor, constant: -8)
        ])
    }
    
    private func updateLikeButtonImage() {
        let likeImage = isLiked ? UIImage(named: "button.like.active") : UIImage(named: "button.like.inactive")
        likeButton.accessibilityIdentifier = isLiked ? "Unlike" : "Like"
        likeButton.setImage(likeImage, for: .normal)
    }
}

